--- a/README
+++ b/README
@@ -29,6 +29,17 @@ Installation
 
 script/plugin install git://github.com/langalex/workling_mailer.git
 
+Configuration
+=============
+
+Delayed e-mails is an awesome thing in production environments, but for e-mail specs/tests in testing environments it can be a mess causing specs/tests to fail because the e-mail haven't been sent directly. Therefore you can configure what environments that should be excluded like so:
+
+# config/initializers/delayed_mailer.rb
+
+Delayed::Mailer.excluded_environments = [:test, :cucumber]  # etc.
+
+...
+
 Credits
 =======
 
